pratica/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-go
spec:
  replicas: 2
  selector:
    matchLabels:
      api: go
  template: 
    metadata:
      labels:
        api: go
    spec:
      containers:
        - name: api-go
          image: raphaeldiasc/goapp
