pratica/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    api: go
  ports:
    - port: 7000
      targetPort: 8090
